# libp2p-pebble-raft

./: .gitignore  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum  magefile.go
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
api/: shmevent.capnp
cmd/: magefile.go
cmd/kvctl-cli/: main.go
cmd/kvnode/: main.go
docs/: library-usage.md  web.md
mobile/kvmobile/: catalog.go  catalog_test.go  cluster_list.go  cluster_list_test.go  dispatch.go  kvmobile.go  kvmobile_test.go  lifecycle_test.go  logrecord_test.go  permit_execute_test.go  range_scan.go  range_scan_test.go  sendevent_test.go  watch_execute_test.go
pkg/daemon/: add_learner_relay_test.go  cluster_join_leave_test.go  daemon.go  execute_test.go  join_relay_test.go  logpermit_test.go  logrecord_test.go  permit_test.go  relay_acl_test.go
pkg/e2edata/: file.go  file_test.go  identity.go
pkg/e2erun/: android.go  android_test.go  bootstrap.go  desktop.go  isalive_unix.go  isalive_windows.go  run.go  run_test.go  ssh.go  web.go
pkg/ipc/: ipc.go  ipc_android.go
pkg/ipcproto/: proto.go
pkg/kvctl/: catalog.go  catalog_test.go  cluster.go  dispatch.go  dispatch_test.go  identity.go  kvctl.go  kvctl_test.go  range_scan.go  spawn_unix.go  spawn_windows.go
pkg/kvfsm/: fsm.go  kvfsm_test.go
pkg/logrecord/: key.go  key_test.go  record.go  record_test.go
pkg/raft/: node.go  node_test.go
pkg/rafttransport/: transport.go
pkg/registry/: registry.go  registry_test.go
pkg/shmclient/: client.go
pkg/shmevent/: event.go  event_test.go  system.go  system_test.go
pkg/store/: store.go  store_test.go
web-app/: Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  playwright.config.js  vite.config.js  worker.js
web-app/.cargo/: config.toml  wasm-ar.sh  wasm-cc.sh
web-app/src/: app.rs  fsm.rs  ipcproto.rs  learner.rs  lib.rs  msgpack.rs  p2p.rs  raft_wire.rs  shmevent.rs  shmring_ipc.rs  sqlite_store.rs
web-app/tests/: e2e.spec.js  set_get.spec.js
(+7 files in other folders)
