[package]
name = "kv-raft-web"
version = "0.1.0"
edition = "2021"
description = "Browser client for libp2p-kv-raft: a real (non-voting) hashicorp/raft learner compiled to wasm32-unknown-unknown"
repository = "https://github.com/gofsd/libp2p-kv-raft"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
capnp = "0.26.2"
console_error_panic_hook = "0.1.7"
crc32fast = "1.5.0"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
futures = "0.3.32"
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3.103"
libp2p = { version = "0.56", features = ["noise", "yamux", "wasm-bindgen", "webtransport-websys", "relay", "macros"] }
libp2p-stream = "0.4.0-alpha"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shmring = "0.3.0"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["Worker", "MessageEvent", "DedicatedWorkerGlobalScope", "console"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
sqlite-wasm-rs = "0.5.5"

[build-dependencies]
capnpc = "0.26.0"
